--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,11 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 addopts = -v --tb=short
+
+# Custom markers
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
+    integration: marks tests as integration tests (deselect with '-m "not integration"')
+
+# Coverage configuration (run with: pytest --cov=pef --cov-report=html)
+# Requires pytest-cov: pip install pytest-cov
