T-00009: Harden state management with atomic writes, path normalization, and adaptive save interval

--- a/forgecrew.config.json
+++ b/forgecrew.config.json
@@ -20,7 +20,8 @@
     "packages": []
   },
   "scripts": {
-    "build": "npm run build"
+    "test": "python -m pytest",
+    "build": "echo 'No build step for Python project'"
   },
   "den": {
     "defaultBase": "main"
