T-00040: ExifTool startup validation, timeout, and fix bundled binary

--- a/.gitignore
+++ b/.gitignore
@@ -173,6 +173,9 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 
+# ExifTool (auto-downloaded on first run)
+tools/exiftool/
+
 # >>> ForgeCrew (managed - do not edit) >>>
 # ForgeCrew local installation (untracked)
 .forgecrew/
